# cpp-animation-toolkit

./: .gitmodules  CMakeLists.txt  README.md
cpp-animation-engine/: CMakeLists.txt
cpp-animation-engine/include/: cpp-animation-engine.h
cpp-animation-engine/include/animation_engine/: animated_text_object.h  animation_action.h  animation_engine.h  animation_object.h
cpp-animation-engine/include/animation_engine/actions/: animation_action.h
cpp-animation-engine/include/animation_engine/animations/: animation_movement.h  animation_response.hpp
cpp-animation-engine/include/animation_engine/math/: lerp.hpp
cpp-animation-engine/include/animation_engine/objects/: animated_text_object.h  animation_object.h
cpp-animation-engine/src/: animated_text_object.cpp  animation_engine.cpp  animation_object.cpp  cpp-animation-engine.cpp
cpp-animation-engine/src/animations/: animation_movement.cpp  animation_movement_position.cpp
cpp-animation-engine/src/objects/: animated_square_object.cpp
cpp-animation-sandbox/: CMakeLists.txt  cpp-animation-sandbox.cpp
examples/: example1.cpp
include/: simple_animation_toolkit.h
include/animation_engine/: animation_engine.h
include/animation_engine/animations/: animation_size.h
include/animation_engine/math/: position.hpp
include/animation_engine/objects/: animated_circle_object.h  animated_square_object.h  animated_text_object.h
include/simple_animation_toolkit/: animation_engine.h
include/simple_animation_toolkit/actions/: animation_action.h
include/simple_animation_toolkit/animations/: animation_movement.h  animation_response.hpp  animation_size.h
include/simple_animation_toolkit/math/: lerp.hpp  position.hpp
include/simple_animation_toolkit/objects/: animated_circle_object.h  animated_square_object.h  animated_text_object.h  animation_object.h
src/: animation_engine.cpp
src/animations/: animation_movement.cpp  animation_size.cpp
src/objects/: animated_circle_object.cpp  animated_square_object.cpp  animated_text_object.cpp  animation_object.cpp
